@@ -39,6 +39,18 @@ Each release lists incompatible changes at its top.
 @c @end itemize
 @c @end itemize
 
+@heading 1.XX "XXX"
+@itemize @bullet
+
+@item Bug Fixes
+@itemize @minus
+@item Always rebuild the list of marked winows in tabs when closing a marked window. [fuchur]
+@end itemize
+@item Miscellaneous Changes
+@itemize @minus
+@item Make @code{decorate-transients} a UI option (in appearance group) [Christopher Bratusek]
+@end itemize
+@end itemize
 @heading 1.9.1 "Voyager"
 @itemize @bullet
 
