@@ -2,6 +2,9 @@
 	* lisp/sawfish/wm/state/transient.jl: make decorate-transients a
 	defcustom.
 
+	* lisp/sawfish/wm/tabs/tab.jl: improve check-win. Always rebuild list
+	of marked windows when a marked window is closed. [fuchur]
+
 2012-08-31  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/tabs/tab.jl: add support for coloring a window-title
 	in a different color, when a window is marked for tabbing [fuchur]
